Added links from admin pages, removed FIB from new task form, made name/image required on path creation.

--- a/app/views/companies/users.html.haml
+++ b/app/views/companies/users.html.haml
@@ -20,7 +20,7 @@
       - @users.to_a.each_with_index do |u, i|
         %tr
           %td= i
-          %td= u.name
+          %td= link_to u.name, u
           %td= u.email
           %td= u.enrollments.size
           %td= u.earned_points
