--- a/app/views/companies/paths.html.haml
+++ b/app/views/companies/paths.html.haml
@@ -20,7 +20,7 @@
       - @paths.to_a.each_with_index do |p, i|
         %tr
           %td= i
-          %td= p.name
+          %td= link_to p.name, p
           %td= p.personas.first.name
           %td= p.sections.size
           %td= p.tasks.size
