--- a/app/assets/stylesheets/launchpad.css
+++ b/app/assets/stylesheets/launchpad.css
@@ -42,3 +42,4 @@
 .launchpadcolumnheader ul.tabs li a { border-bottom-color: transparent }
 .tab_content table td { padding: 10px 10px 0px 10px; height: 40px; border: 0px; border-bottom: 1px solid #DDD }
 .tab_content table td p { margin-bottom: 0px; }
+.tabs > li > a:hover {cursor:pointer; }
