--- a/app/views/sections/_launchpad.html.haml
+++ b/app/views/sections/_launchpad.html.haml
@@ -6,7 +6,7 @@
         %li.active
           %a#arena_tab_link{title: "Arena"} Arena
         %li
-          %a#questions_tab_link{title: "Creative Responses"}  CR's
+          %a#questions_tab_link{title: "Creative Responses"}  Creative Response
         %li
           %a#achievements_tab_link{title: "Tasks"} Tasks
       %div#arena_tab.tab_content
