--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -19,9 +19,14 @@
         %h3
           = link_to truncate(r.user.to_s, length: 50), r.user, class:"username"
         %div.votingandpointsarea
-          = link_to vote_task_path(r.task.id, sa_id: r.submitted_answer.id), remote: true, class: ("btn vote_button " + (@votes.include?(r.submitted_answer.id) ? "primary" : "")) do
-            %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/purple+upvote+arrow.png" }
-            %div.vote_count= r.submitted_answer.total_votes.to_i
+          - if current_user
+            = link_to vote_task_path(r.task.id, sa_id: r.submitted_answer.id), remote: true, class: ("btn vote_button " + (@votes.include?(r.submitted_answer.id) ? "primary" : "")) do
+              %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/purple+upvote+arrow.png" }
+              %div.vote_count= r.submitted_answer.total_votes.to_i
+          - else
+            %a.btn.vote_button
+              %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/purple+upvote+arrow.png" }
+              %div.vote_count= r.submitted_answer.total_votes.to_i
       %div.posttext.leveltext= link_to r.task.question, task_details_path(r.path, r.submitted_answer.id), style: "color: inherit;"
       = link_to submission_details_path(r.path, r.submitted_answer.id), style: "text-transform: none; color: inherit;" do
         %div.CRarea
