Major cleanup on path creation, replacing existing image.

--- a/app/views/stored_resources/_new_image.html.haml
+++ b/app/views/stored_resources/_new_image.html.haml
@@ -8,6 +8,7 @@
           var result = data.result;
           var $parent = $(this).parent().parent();
           if(result.status == "success"){
+            $(".original_image_preview").remove();
             $parent.find("input.image_input_field").val(result.id);
             $parent.find("div.image_input").remove();
             $parent.find("img.image_preview").attr("src", result.link).show();
