--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -1,4 +1,31 @@
-= render "settings_modal", { :path => @path, :categories => @categories }
+%div#settings_modal.modal.hide.fade{ style: "top: 5%; margin-top: 0px; width: 600px;" }
+  %div.modal-header
+    %a.close{ href: "#" }
+    %h3 Challenge Settings
+  %div.modal-body
+    = form_for(@path) do |f|
+      = render "shared/error_messages", object: f.object
+      %div.field.clearfix
+        = f.label "Challenge Name"
+        %div.input= f.text_field :name
+      %div.field.clearfix
+        = f.label :description
+        %div.input= f.text_area :description, style: "width: 300px;", rows: "3", placeholder: "Try to describe this Challenge to others in a few sentences..."
+      %div.field.clearfix{ style: "margin-top:10px;" }
+        = f.label "Image"
+        %div.input= render "stored_resources/new_image"
+      %div.field.clearfix
+        %div.input= image_tag(@path.path_pic, class: "original_image_preview", style: "height: 75px; max-width: 150px;")
+      - if @path.user == current_user
+        %div.field.clearfix{ style: "margin-bottom: 5px;" }
+          = f.label :collaborators, style: "padding-top:0px;"
+          %div.input= link_to "View and add collaborators", collaborator_path_path(@path), style: "line-height:18px;"
+      %hr
+      %div{ style: "margin: 10px 0; padding-bottom:20px;" }
+        %div{ style: "float:right;" }
+          = f.submit "Save", class: "button button-actionable", style: "margin-right: 10px;"
+          %span.button.button-standard{ onclick: "$('#settings_modal').modal('hide');" } Close
+
 - @sections.each do |s|
   = render "section_settings_modal", { :section => s }
 %div.single_pane{ style: "min-height: 600px;" }
@@ -41,8 +68,7 @@
                   %h2.section_editable{ onclick: "$('#section_settings_modal_#{s.id}').modal({show:true});" }= (i+1).to_s+". "+s.name
                   %div
                     %span.label{ style: "font-size: 12px; vertical-align:middle;" }
-                      %span#question_counter= s.tasks.size 
-                      questions
+                      %span#question_counter #{s.tasks.size} questions
                     - unless s.is_published
                       %span.label.warning{ style: "font-size: 12px; vertical-align:middle; background-color: #0069D6;" } draft
               %div.section_questions_container.row{ style: "display:none;" }
