--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -27,7 +27,30 @@
           %span.button.button-standard{ onclick: "$('#settings_modal').modal('hide');" } Close
 
 - @sections.each do |s|
-  = render "section_settings_modal", { :section => s }
+  %div{ id: "section_settings_modal_#{s.id}", class: "modal hide fade", style: "top: 50%;" }
+    %div.modal-header
+      %a.close
+      %h3 Section Settings
+    %div.modal-body
+      = form_for(s) do |f|
+        %div.field.clearfix
+          = f.label :name
+          %div.input= f.text_field :name, class: "xlarge"
+        %div.field.clearfix
+          = f.label "Points to unlock"
+          %div.input= f.text_field :points_to_unlock, placeholder: "optional..."
+        %div.field.clearfix
+          = f.label "Delete Section"
+          %div.input{ style: "padding-top: 8px;" }= link_to "Delete", confirm_delete_section_path(s)
+        %div{ style: "float:left; margin: 20px 20px 10px 0;" }
+          - if s.is_published
+            = link_to "Unpublish", unpublish_section_path(s), class: "button button-info", confirm: "Are you sure you want to unpublish this section?"
+          - else
+            = link_to "Publish", publish_section_path(s), class: "button button-info", confirm: "Are you sure you want to publish this section?"
+        %div{ style: "float:right; margin: 10px 0 10px 0;" }
+          %span.button.button-standard{ onclick: "$(this).parents('.modal').modal('hide');", style: "margin-right: 8px;" } Close
+          = f.submit "Save", class: "button button-actionable"
+
 %div.single_pane{ style: "min-height: 600px;" }
   %div.row{ style: "vertical-align: top; margin: 0 0 20px 0;"}
     %div.span3
@@ -63,8 +86,6 @@
                     %li
                       %a.edit_section_settings_pill{ onclick: "$('#section_settings_modal_#{s.id}').modal({show:true});" } Settings
                 %div.span14
-                  - if s.has_custom_image?
-                    = image_tag(s.pic, size: "70x70", style: "float:left; margin-right: 10px;")
                   %h2.section_editable{ onclick: "$('#section_settings_modal_#{s.id}').modal({show:true});" }= (i+1).to_s+". "+s.name
                   %div
                     %span.label{ style: "font-size: 12px; vertical-align:middle;" }
