--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -19,7 +19,7 @@
     %div.exploreheader
       %div.modal_close
         %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
-      %h1{ style: "font-size: 23px; margin-bottom: 3px;" }
+      %h1{ style: "font-size: 23px;" }
         - if current_user.personas.empty?
           <strong>Explore:</strong> Adopt your first Persona...
         - else
