--- a/app/views/personas/index.html.haml
+++ b/app/views/personas/index.html.haml
@@ -1,6 +1,6 @@
 %div#company-settings.single_pane
   = render "companies/tab_header", { :company => current_user.company, :mode => "personas" }
-  %table
+  %table.table
     %thead
       %th Name
       %th Personas
