--- a/app/views/user_roles/index.html.haml
+++ b/app/views/user_roles/index.html.haml
@@ -1,7 +1,7 @@
 %div.single_pane
   = render "companies/tab_header", { company: current_company, mode: "roles" }
   %h2{ style: "margin-bottom:15px;" } User roles
-  %table
+  %table.table
     %thead
       %tr
         %th #
