--- a/app/views/companies/submissions.html.haml
+++ b/app/views/companies/submissions.html.haml
@@ -9,7 +9,7 @@
     = form_tag admin_submissions_path, style: "margin: 0;", method: "get" do
       = text_field_tag :search, params[:search], class: "large", placeholder: "Search by content..."
       = submit_tag "Search", class: "button button-standard"
-  %table
+  %table.table
     %thead
       %tr
         %th{ style: "width: 10%" } id
