--- a/app/views/tasks/_edit_task_form.html.haml
+++ b/app/views/tasks/_edit_task_form.html.haml
@@ -1,25 +1,23 @@
-= form_for(@task, action: :update, remote: true, "data-type" => "html") do |f|
+= form_for(@task, action: :update, remote: true, "data-type" => "html", html: { class: "form-horizontal edit_task" } ) do |f|
   %div{ style: "margin-bottom:20px; float:right;" }
     = f.submit "Save", :id => "save_question_button", :class => "button button-info"
     %span.button.button-standard{ onclick: "$(this).parents('td').find('div.question_display').show(); $(this).parents('td').find('.edit_task').remove();" } Close
   %div
-    %h3{ style: "margin-left:70px;" } Edit Question
-    %div.field.clearfix
-      = f.label :question
-      %div.input
+    %h4{ style: "margin-left:46px;" } Edit Question
+    %div.control-group
+      %label.control-label Question
+      %div.controls
         = f.text_area :question, class: "xxlarge", rows: "3"
-    %div.row
-      %div.span8.answers{ style: "margin: 15px 0 0 20px;" }
-        - @answers.each do |a|
-          %div.field.clearfix
-            = f.label (a.is_correct ? "Correct answer" : "Wrong answer")
-            %div.input
-              = f.text_field "answer_#{a.id}", value: a.content, maxlength: 255, size: 75, class: (a.is_correct ? "correct_answer" : "wrong_answer")
-        %div.field.clearfix{ style: "margin-top:15px;" }
-          %div.input
-            - if @stored_resource
-              = image_tag @stored_resource.obj.url, style: "height: 100px;"
-              = link_to "Remove", @stored_resource, method: :delete, confirm: "Are you sure you want to remove this attachment?"
-            - else
-              = link_to "Add Image", add_stored_resource_task_path(@task)
-      %div.span8.suggestions{ style: "padding-top:10px; margin-left:150px;" }
+    %div.answers
+      - @answers.each do |a|
+        %div.control-group
+          %label.control-label= a.is_correct ? "Correct answer" : "Wrong answer"
+          %div.controls
+            = f.text_field "answer_#{a.id}", value: a.content, maxlength: 255, size: 75, class: (a.is_correct ? "correct_answer" : "wrong_answer")
+      %div.control-group
+        %div.controls
+          - if @stored_resource
+            = image_tag @stored_resource.obj.url, style: "height: 100px;"
+            = link_to "Remove", delete_stored_resource_path(@stored_resource.id), method: :delete, confirm: "Are you sure you want to remove this attachment?"
+          - else
+            = link_to "Add Image", add_stored_resource_task_path(@task)
