--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -25,7 +25,7 @@
         - else
           <strong>Explore:</strong> Choose a persona...
       %div
-        %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px; position:relative; top:1px;" }
+        %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px; position:relative; bottom:2px;" }
         %p{ style: "font-size: 14px; line-height: 28px; display:inline; "} Your Persona should represent you and your interests. You can always enroll in multiple Personas. 
     %hr{ style: "margin:0px;" }
     %div.personatiles
