--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -28,14 +28,14 @@
       %div.modal_close{ style: "margin-right:1px;" }
         %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
     %div{ style: "padding-bottom:8px;" }
-      = image_tag @persona.picture
+      = image_tag @persona.picture, style: "position:relative; bottom:2px;"
       %h1{ style: "font-size: 23px; position:relative; top:8px; line-height:1;" }
         - if current_user.enrollments.size == 0
           <strong>#{@persona.name}:</strong> Choose your first Challenge...
         - else
           <strong>#{@persona.name}:</strong> Choose your Challenge...
     %div
-      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px; height:15px; margin:4px 4px 0 0;" }
+      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px; height:15px; margin:4px 4px 0 0; position:relative; top:1px;" }
       %p{ style: "font-size: 14px; line-height: 28px; display:inline;" } Challenges represent skillsets where you can prove what you know, and be inspired by others. 
   %hr{ style: "margin:0px;" }
   %div.challengetiles
