--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -65,7 +65,7 @@ code,pre{font:inherit;}
 .mosaic-overlay {display:none;z-index:5;position:absolute;width:100%; height:100%; background:#111;}
 .details h4{margin: 9px 10px 10px 10px;font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif;line-height: 10%;letter-spacing: 0.1em; color: rgba(255, 255, 255, .9);text-shadow: 1px 1px 0 black; font-weight:normal; }
 .details h5{margin: 9px 12px; font: 300 11px 'Lucida Grande', Tahoma, Verdana, sans-serif; color: #AAA;}
-.details button{padding:3px; float:right; position:relative; right:6px; font-size:10px; font-weight:bold; opacity:1;}
+.details button{padding:0px 4px; float:right; position:relative; right:6px; font-size:10px; font-weight:bold; opacity:1; color:white; }
 .mosaic-overlay:hover .details>h4{color:white;}
 .leftbox{text-shadow: 0 1px 0 white;border: 1px solid rgba(0, 0, 0, .1); font-size:12px;position: relative; margin-bottom: 10px;line-height: 16px; border-radius: 6px; display:block;}
 .leftboxfooter{  background-color:whitesmoke; border-bottom-right-radius: 5px; border-bottom-left-radius: 5px; padding: 2px 10px 10px;}
