--- a/app/assets/stylesheets/z_bootstrap-overrides.css
+++ b/app/assets/stylesheets/z_bootstrap-overrides.css
@@ -11,6 +11,19 @@
   border-color: #C43C35 #C43C35 #971D1C; 
 }
 
+.btn-danger{
+	background-color: #971D1C; 
+  background-repeat: repeat-x;
+  background-image: -moz-linear-gradient(top, #EE5F5B, #971D1C);
+  background-image: -ms-linear-gradient(top, #EE5F5B, #971D1C); 
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #EE5F5B), color-stop(100%, #971D1C)); 
+  background-image: -webkit-linear-gradient(top, #EE5F5B, #971D1C);
+  background-image: -o-linear-gradient(top, #EE5F5B, #971D1C);
+  background-image: linear-gradient(top, #EE5F5B, #971D1C);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-color: #C43C35 #C43C35 #971D1C; 
+}
+
 .fill { height: 40px; }
 .navbar-inner, .navbar .fill {
   border: 0;
