--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -10,7 +10,7 @@
           %div{ style: "width: 550px; margin-top: 10px;" }
             %h1= @path.name
             - if current_user
-              %h3{ style: "margin: 0 0 5px 0; font-size: 18px;" } Level #{@enrollment.level}, #{@enrollment.total_points} points
+              %h3{ style: "font-size: 18px; line-height:33px; " } Level #{@enrollment.level}, #{@enrollment.total_points} points
             - else
               %h4{ style: "height: 46px; cursor: pointer;" }
                 %a.login_link Login or register to join this Challenge!
