--- a/app/views/layouts/_login_modal.html.haml
+++ b/app/views/layouts/_login_modal.html.haml
@@ -8,7 +8,7 @@
           %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
         %h1{ style: "margin-bottom: 0; line-height: 23px;" }
           %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", :style => "height:45px;" } 
-          %span{style: "position:relative; bottom: 11px; font-size:26px;"} Welcome to MetaBright! 
+          %span{style: "font-size:26px;"} Welcome to MetaBright! 
       %hr{ style: "margin: 0;" }
       %div.explorebody{ style: "min-height: 245px; max-height: 450px; overflow-y: auto;" }
         %center
@@ -16,9 +16,9 @@
           %div
             = link_to "/auth/google_oauth2", class: "btn danger", style: "width:205px;" do
               %img{ style: "height:30px;", src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+google.png" }
-              %span.landingbuttontext{ style: "color:white; font-size:13px; display:inline-block; position:relative; bottom:9px; left:5px; font-family:'MuliRegular'; font-weight: bold;" } Sign in with Google »
+              %span.landingbuttontext{ style: "color:white; font-size:13px; display:inline-block; position:relative; left:5px; font-family:'MuliRegular'; font-weight: bold;" } Sign in with Google »
           %div{style: "background-image: url(https://s3.amazonaws.com/moonlite-nsdub/static/divider.png); background-repeat:no-repeat; background-position: center 10px; width:234px; margin:10px 0; "} OR
           %div
             = link_to "/auth/facebook", class: "btn danger", style: "width:205px;" do
               %img{ style: "height:30px;", src: "https://s3.amazonaws.com/moonlite-nsdub/static/icon+facebook.png" }
-              %span.landingbuttontext{ style: "color:white; font-size:13px; display:inline-block; position:relative; bottom:9px; left:5px; font-family:'MuliRegular'; font-weight: bold;" } Sign in with Facebook »
+              %span.landingbuttontext{ style: "color:white; font-size:13px; display:inline-block; position:relative; left:5px; font-family:'MuliRegular'; font-weight: bold;" } Sign in with Facebook »
