--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -47,4 +47,4 @@
             = link_to "Sign out", signout_path
         - elsif params[:controller] == "paths"
           %li
-            %a.btn.danger.login_link{ style: "padding:3px 7px; border-radius:2px; margin-top:6px;" } Sign in
+            %a.button.btn-danger.login_link{ style: "padding:3px 7px; border-radius:2px; margin-top:6px; text-shadow:none; color:white;" } Sign in
